Fix fullpage data-anchors bug and add fallback for fullpage anchors on mobile

--- a/src/sass/components/_mobile-nav.sass
+++ b/src/sass/components/_mobile-nav.sass
@@ -25,3 +25,12 @@
     align-items: center
     justify-content: space-around
     margin: 0 3rem
+
+  +mediaMaxWidth(380)
+    &_list
+        flex: 4
+        li
+          margin: 0.6rem 0
+
+    &_socials
+      flex: 2.5
